launchpad-buildd (201) UNRELEASED; urgency=medium

  * Sanitize non-user-bound macaroons in build logs.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 20 Aug 2021 17:53:12 +0100

launchpad-buildd (200) bionic; urgency=medium

  * Add core22 to the list of supported core snap names.
  * Rename "snap proxy" to "builder proxy", since it's used for several
    different build types nowadays.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 16 Aug 2021 16:38:32 +0100

launchpad-buildd (199) bionic; urgency=medium

  * Upload oci layers to librarian as tar.gz

 -- Ioana Lasc <ioana.lasc@canonical.com>  Tue, 03 Aug 2021 12:08:15 +0300

launchpad-buildd (198) bionic; urgency=medium

  * Run charmcraft in verbose mode.
  * Honour proxy arguments when building charms.
  * Install charmcraft with --classic.
  * Run charmcraft in managed mode.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 20 Jul 2021 10:05:27 +0100

launchpad-buildd (197) bionic; urgency=medium

  [ Tom Wardill ]
  * Add charm building support

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 14 Jun 2021 16:30:33 +0100

launchpad-buildd (196) bionic; urgency=medium

  * Handle symlinks in OCI image files

 -- Tom Wardill <tom.wardill@canonical.com>  Mon, 17 May 2021 14:19:04 +0100

launchpad-buildd (195) bionic; urgency=medium

  * sbuild-package: Temporarily remove lxd group membership (LP: #1820348).
  * Tolerate missing "apt-get indextargets" on trusty.
  * Add a Juju charm which can be used to deploy local launchpad-buildd
    instances.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 26 Mar 2021 08:54:22 +0000

launchpad-buildd (194) bionic; urgency=medium

  [ Colin Watson ]
  * Stop setting $mailto in .sbuildrc, to work around LP #1859010.
  * Stop overquoting OCI --build-arg options (LP: #1902007).
  * Update production deployment documentation in README.

  [ Tom Wardill ]
  * Fix OCI builds that don't pull another image. 

 -- Tom Wardill <tom.wardill@canonical.com>  Thu, 07 Jan 2021 10:02:27 +0000
